@@ -4,6 +4,7 @@ FastSM Changelog
 0.4.2
 Disable VLC entirely on macOS - was causing crashes
 Fix Mac crash when timeline fails to load - GUI updates now thread-safe
+Fix Mac crash from speech in background threads - now routes to main thread
 Fix Bluesky reply not recognizing mentioned users when post fetch delayed
 Fix Bluesky mentions appearing in notifications - now respects mentions_in_notifications setting
 Fix mentions appearing in notifications from cache - now filtered when loading
